--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "joi": "^17.12.1",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
-    "query-string": "7.1.3",
-    "react": "18.2.0",
+    "query-string": "^7.1.3",
+    "react": "^18.2.0",
     "react-big-calendar": "^1.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
@@ -56,14 +56,14 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.202",
     "@types/ms": "^0.7.34",
-    "@types/node": "18.19.16",
-    "@types/react": "18.2.55",
+    "@types/node": "^18.19.17",
+    "@types/react": "^18.2.55",
     "@types/react-big-calendar": "^1.8.8",
-    "@types/react-dom": "18.2.19",
+    "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
@@ -71,7 +71,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": "^18"
