--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   photo_view: ^0.14.0
   wechat_assets_picker: ^9.0.0-dev.2
   wechat_camera_picker: ^4.2.0-dev.3
+  window_manager: ^0.3.8
 
 dev_dependencies:
   build_runner: ^2.4.8
