build: update Makefile

--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,2 +1,3 @@
 #include? "Pods/Target Support Files/Pods-WatermarkAssistant/Pods-WatermarkAssistant.release.xcconfig"
 #include "Generated.xcconfig"
+#include? "BuildConfig.xcconfig"
