--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,2 +1,3 @@
 #include? "Pods/Target Support Files/Pods-WatermarkAssistant/Pods-WatermarkAssistant.debug.xcconfig"
 #include "Generated.xcconfig"
+#include? "BuildConfig.xcconfig"
