--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = Watermark Assistant
+PRODUCT_NAME = PicGuard
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.kjxbyz.watermarkassistant.mac
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 Watermark Assistant. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 PicGuard. All rights reserved.
