--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: watermark_assistant
-description: "Watermark Assistant."
+name: picguard
+description: "This app can add watermarks to pictures to prevent them from being used maliciously."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
