--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-project 'WatermarkAssistant', {
+project 'PicGuard', {
   'Debug' => :debug,
   'Profile' => :release,
   'Release' => :release,
@@ -27,12 +27,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
-target 'WatermarkAssistant' do
+target 'PicGuard' do
   use_frameworks!
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  target 'WatermarkAssistantTests' do
+  target 'PicGuardTests' do
     inherit! :search_paths
   end
 end
