--- a/macos/Podfile
+++ b/macos/Podfile
@@ -3,7 +3,7 @@ platform :osx, '10.15'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-project 'WatermarkAssistantMac', {
+project 'PicGuardMac', {
   'Debug' => :debug,
   'Profile' => :release,
   'Release' => :release,
@@ -26,12 +26,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_macos_podfile_setup
 
-target 'WatermarkAssistantMac' do
+target 'PicGuardMac' do
   use_frameworks!
   use_modular_headers!
 
   flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
-  target 'WatermarkAssistantMacTests' do
+  target 'PicGuardMacTests' do
     inherit! :search_paths
   end
 end
