--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   app_settings: ^5.1.1
+  collection: ^1.18.0
   cupertino_icons: ^1.0.6
   device_info_plus: ^9.1.2
+  dropdown_button2: ^2.3.9
   file_picker: ^6.1.1
   firebase_analytics: ^10.8.6
   firebase_core: ^2.25.4
@@ -39,25 +41,33 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_file_dialog: ^3.0.2
+  flutter_form_builder: ^9.2.1
+  flutter_gen: ^5.4.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.3.10
   fluttertoast: ^8.2.4
+  form_builder_validators: ^9.1.0
   freezed_annotation: ^2.4.1
   image_picker: ^1.0.7
   json_annotation: ^4.8.1
   keyboard_dismisser: ^3.0.0
   mime: ^1.0.5
+  modal_bottom_sheet: ^3.0.0-pre
   package_info_plus: ^5.0.1
   path: ^1.9.0
   permission_handler: ^11.3.0
   photo_view: ^0.14.0
+  reorderables: ^0.6.0
   shared_preferences: ^2.2.2
+  slang: ^3.29.0
+  slang_flutter: ^3.29.0
+  syncfusion_flutter_core: ^24.2.7
+  syncfusion_flutter_sliders: ^24.2.7
   synchronized: ^3.1.0+1
   url_launcher: ^6.2.4
   uuid: ^4.3.3
   wechat_assets_picker: ^9.0.0-dev.2
-  wechat_camera_picker: ^4.2.0-dev.3
   window_manager: ^0.3.8
 
 dev_dependencies:
@@ -67,6 +77,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.4.7
   json_serializable: ^6.7.1
+  slang_build_runner: ^3.29.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -85,10 +96,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/icons/
      - logo/
   #   - images/a_dot_ham.jpeg
 
@@ -117,3 +128,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_gen:
+  output: lib/gen/ # Optional (default: lib/gen/)
+  line_length: 80 # Optional (default: 80)
+
+  # Optional
+#  integrations:
+#    flutter_svg: true
+#    flare_flutter: true
+#    rive: true
+#    lottie: true
