--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,15 +15,13 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
-
-    plugins {
-        id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
-    }
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.2.2" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
+    id "com.google.gms.google-services" version "4.4.1" apply false
 }
 
 include ":app"
