--- a/appdmg.json
+++ b/appdmg.json
@@ -5,5 +5,9 @@
   "contents": [
     { "x": 448, "y": 344, "type": "link", "path": "/Applications" },
     { "x": 192, "y": 344, "type": "file", "path": "build/macos/Build/Products/Release/PicGuard.app" }
-  ]
+  ],
+  "code-sign": {
+    "signing-identity": "Developer ID Application: Qingdao INSCO Network Technology Co., Ltd. (43V9N6VW8L)",
+    "identifier": "com.kjxbyz.watermarkassistant.mac"
+  }
 }
