--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,13 @@
       "matchPackageNames": ["@types/node"]
     },
     {
+      "allowedVersions": "18",
+      "matchPackageNames": [
+        "@commitlint/cli",
+        "@commitlint/config-conventional"
+      ]
+    },
+    {
       "allowedVersions": "7",
       "matchPackageNames": ["query-string"]
     },
