--- a/docs/package.json
+++ b/docs/package.json
@@ -11,16 +11,17 @@
     "prepare": "cd .. && husky docs/.husky"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.2",
     "@octokit/rest": "^20.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-tooltip": "^1.0.7",
     "accept-language": "^3.0.18",
     "classnames": "^2.5.1",
     "contentlayer": "^0.3.4",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.5.0",
     "email-validator": "^2.0.4",
     "focus-trap-react": "^10.2.3",
-    "framer-motion": "^11.0.12",
+    "framer-motion": "^11.0.14",
     "http-status": "^1.7.4",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -30,7 +31,7 @@
     "ms": "^2.1.3",
     "next": "^14.1.3",
     "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.6",
     "query-string": "^7.1.3",
     "react": "^18.2.0",
@@ -56,10 +57,10 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.17.0",
     "@types/ms": "^0.7.34",
-    "@types/node": "^18.19.23",
-    "@types/react": "^18.2.65",
+    "@types/node": "^18.19.24",
+    "@types/react": "^18.2.66",
     "@types/react-big-calendar": "^1.8.9",
-    "@types/react-dom": "^18.2.21",
+    "@types/react-dom": "^18.2.22",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
