--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   app_settings: ^5.1.1
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
-  device_info_plus: ^9.1.2
+  device_info_plus: ^10.0.1
   dropdown_button2: ^2.3.9
-  firebase_analytics: ^10.8.9
-  firebase_core: ^2.27.0
+  file_picker: ^8.0.0+1
+  firebase_analytics: ^10.8.10
+  firebase_core: ^2.27.1
   flutter:
     sdk: flutter
   flutter_form_builder: ^9.2.1
@@ -49,7 +50,7 @@ dependencies:
   keyboard_dismisser: ^3.0.0
   mime: ^1.0.5
   modal_bottom_sheet: ^3.0.0
-  package_info_plus: ^5.0.1
+  package_info_plus: ^6.0.0
   path: ^1.9.0
   permission_handler: ^11.3.0
   photo_view: ^0.14.0
@@ -62,7 +63,6 @@ dependencies:
   synchronized: ^3.1.0+1
   url_launcher: ^6.2.5
   uuid: ^4.3.3
-  wechat_assets_picker: ^9.0.2
   window_manager: ^0.3.8
 
 dev_dependencies:
