fix(deps): update flutter to 3.19.4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: picguard
-description: "This app can add watermarks to pictures to prevent them from being used maliciously."
+description: "Your pictures, your signature."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
-  flutter: ">=3.19.3"
+  sdk: '>=3.3.2 <4.0.0'
+  flutter: ">=3.19.4"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
