--- a/docs/package.json
+++ b/docs/package.json
@@ -12,11 +12,34 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.2",
+    "@hookform/resolvers": "^3.3.4",
     "@octokit/rest": "^20.0.2",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "accept-language": "^3.0.18",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
     "email-validator": "^2.0.4",
@@ -28,6 +51,7 @@
     "i18next-resources-to-backend": "^1.2.0",
     "joi": "^17.12.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.363.0",
     "ms": "^2.1.3",
     "next": "^14.1.4",
     "next-contentlayer": "^0.3.4",
@@ -35,8 +59,12 @@
     "nextjs-toploader": "^1.6.11",
     "query-string": "^7.1.3",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
+    "react-datalist-input": "^3.2.1",
+    "react-day-picker": "^8.10.0",
     "react-big-calendar": "^1.11.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
@@ -44,10 +72,14 @@
     "react-rough-notation": "^1.0.5",
     "react-wrap-balancer": "^1.1.0",
     "rehype-slug": "^6.0.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
     "use-debounce": "^10.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
@@ -58,7 +90,7 @@
     "@types/lodash": "^4.17.0",
     "@types/ms": "^0.7.34",
     "@types/node": "^18.19.26",
-    "@types/react": "^18.2.67",
+    "@types/react": "^18.2.69",
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.22",
     "@types/uuid": "^9.0.8",
