--- a/docs/package.json
+++ b/docs/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "accept-language": "^3.0.18",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -44,7 +46,7 @@
     "date-fns": "^3.6.0",
     "email-validator": "^2.0.4",
     "focus-trap-react": "^10.2.3",
-    "framer-motion": "^11.0.22",
+    "framer-motion": "^11.0.23",
     "http-status": "^1.7.4",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -68,14 +70,12 @@
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
-    "react-particles": "^2.12.2",
     "react-rough-notation": "^1.0.5",
     "react-wrap-balancer": "^1.1.0",
     "rehype-slug": "^6.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "tsparticles": "^2.12.0",
-    "tsparticles-engine": "^2.12.0",
+    "tsparticles": "^3.3.0",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
