--- a/docs/package.json
+++ b/docs/package.json
@@ -14,27 +14,6 @@
     "@emotion/is-prop-valid": "^1.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@octokit/rest": "^20.1.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "accept-language": "^3.0.18",
@@ -54,6 +33,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "ms": "^2.1.3",
+    "muse-ui": "^4.0.0-alpha.0",
     "next": "^14.1.4",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
@@ -104,6 +84,11 @@
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
+  },
+  "overrides": {
+    "muse-ui": {
+      "react-hook-form": "^7.51.2"
+    }
   },
   "engines": {
     "node": "^18"
