ci: add macOS support

--- a/macos/Flutter/Flutter-Debug.xcconfig
+++ b/macos/Flutter/Flutter-Debug.xcconfig
@@ -1,2 +1,3 @@
 #include? "Pods/Target Support Files/Pods-PicGuardMac/Pods-PicGuardMac.debug.xcconfig"
 #include "ephemeral/Flutter-Generated.xcconfig"
+#include? "BuildConfig.xcconfig"
