--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -380,3 +380,111 @@ jobs:
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.mobileprovision
+
+  macos:
+    name: Create macos
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.19.5'
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Resolving flutter dependencies
+        run: flutter pub get
+
+      - name: Resolving macos dependencies
+        run: cd macos && pod install --repo-update && cd ..
+
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          CERT_BASE64_MAC: ${{ secrets.CERT_BASE64_MAC }}
+          CERT_DEV_BASE64: ${{ secrets.CERT_DEV_BASE64 }}
+          P12_BASE64_MAC: ${{ secrets.P12_BASE64_MAC }}
+          P12_DEV_BASE64: ${{ secrets.P12_DEV_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          PROVISION_PROFILE_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_BASE64_MAC }}
+          PROVISION_PROFILE_DEV_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_DEV_BASE64_MAC }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          CERTIFICATE_DEV_PATH=$RUNNER_TEMP/build_certificate_dev.p12
+          CERT_PATH=$RUNNER_TEMP/developerID_application.cer
+          CERT_DEV_PATH=$RUNNER_TEMP/development.cer
+          PP_PATH=$RUNNER_TEMP/watermark_assistant_mac_appstore.provisionprofile
+          PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_mac_dev.provisionprofile
+          KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$P12_BASE64_MAC" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$P12_DEV_BASE64" | base64 --decode --output $CERTIFICATE_DEV_PATH
+          echo -n "$CERT_BASE64_MAC" | base64 --decode --output $CERT_PATH
+          echo -n "$CERT_DEV_BASE64" | base64 --decode --output $CERT_DEV_PATH
+          echo -n "$PROVISION_PROFILE_BASE64_MAC" | base64 --decode --output $PP_PATH
+          echo -n "$PROVISION_PROFILE_DEV_BASE64_MAC" | base64 --decode --output $PP_DEV_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security import $CERTIFICATE_DEV_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security import $CERT_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
+          security import $CERT_DEV_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          mv $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          mv $PP_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Build macOS
+        if: github.event.inputs.env == 'development'
+        run: |
+          echo "╠ Removing build products and intermediate files from the build root..."
+          cd macos && xcodebuild clean && cd ..
+          echo "╠ Releasing to app store..."
+          bash build-macos.sh && flutter build macos
+
+      - name: Build macOS
+        if: github.event.inputs.env == 'production'
+        run: |
+          echo "╠ Removing build products and intermediate files from the build root..."
+          cd macos && xcodebuild clean && cd ..
+          echo "╠ Releasing to app store..."
+          flutter build macos
+
+      - name: Build DMG
+        run: |
+          rm -f ./PicGuard.dmg && pnpm -c -s dlx appdmg ./appdmg.json ./PicGuard.dmg
+
+      # Package the build.
+      - name: Copy build for macOS
+        run: cp *.dmg $GITHUB_WORKSPACE/
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          if [ -f "$RUNNER_TEMP/pg-signing.keychain-db" ]; then
+            echo "$RUNNER_TEMP/pg-signing.keychain-db"
+            security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
+          fi
+          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.provisionprofile
