--- a/macos/Flutter/Flutter-Release.xcconfig
+++ b/macos/Flutter/Flutter-Release.xcconfig
@@ -1,2 +1,3 @@
 #include? "Pods/Target Support Files/Pods-PicGuardMac/Pods-PicGuardMac.release.xcconfig"
 #include "ephemeral/Flutter-Generated.xcconfig"
+#include? "BuildConfig.xcconfig"
