--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -242,10 +242,8 @@ jobs:
 
       - name: Install the Apple certificate and provisioning profile
         env:
-          CERT_BASE64_MAC: ${{ secrets.CERT_BASE64_MAC }}
-          CERT_DEV_BASE64: ${{ secrets.CERT_DEV_BASE64 }}
           P12_BASE64_MAC: ${{ secrets.P12_BASE64_MAC }}
-          P12_DEV_BASE64: ${{ secrets.P12_DEV_BASE64 }}
+          P12_DEV_BASE64_MAC: ${{ secrets.P12_DEV_BASE64_MAC }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
           PROVISION_PROFILE_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_BASE64_MAC }}
           PROVISION_PROFILE_DEV_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_DEV_BASE64_MAC }}
@@ -254,17 +252,13 @@ jobs:
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERTIFICATE_DEV_PATH=$RUNNER_TEMP/build_certificate_dev.p12
-          CERT_PATH=$RUNNER_TEMP/developerID_application.cer
-          CERT_DEV_PATH=$RUNNER_TEMP/development.cer
           PP_PATH=$RUNNER_TEMP/watermark_assistant_mac_appstore.provisionprofile
           PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_mac_dev.provisionprofile
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
           echo -n "$P12_BASE64_MAC" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$P12_DEV_BASE64" | base64 --decode --output $CERTIFICATE_DEV_PATH
-          echo -n "$CERT_BASE64_MAC" | base64 --decode --output $CERT_PATH
-          echo -n "$CERT_DEV_BASE64" | base64 --decode --output $CERT_DEV_PATH
+          echo -n "$P12_DEV_BASE64_MAC" | base64 --decode --output $CERTIFICATE_DEV_PATH
           echo -n "$PROVISION_PROFILE_BASE64_MAC" | base64 --decode --output $PP_PATH
           echo -n "$PROVISION_PROFILE_DEV_BASE64_MAC" | base64 --decode --output $PP_DEV_PATH
 
@@ -276,8 +270,6 @@ jobs:
           # import certificate to keychain
           security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security import $CERTIFICATE_DEV_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security import $CERT_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
-          security import $CERT_DEV_PATH -P "$P12_PASSWORD" -A -t cert -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           # apply provisioning profile
