--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,49 +240,74 @@ jobs:
       - name: Resolving macos dependencies
         run: cd macos && pod install --repo-update && cd ..
 
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          P12_BASE64_MAC: ${{ secrets.P12_BASE64_MAC }}
-          P12_DEV_BASE64_MAC: ${{ secrets.P12_DEV_BASE64_MAC }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          PROVISION_PROFILE_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_BASE64_MAC }}
-          PROVISION_PROFILE_DEV_BASE64_MAC: ${{ secrets.PROVISION_PROFILE_DEV_BASE64_MAC }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          CERTIFICATE_DEV_PATH=$RUNNER_TEMP/build_certificate_dev.p12
-          PP_PATH=$RUNNER_TEMP/watermark_assistant_mac_appstore.provisionprofile
-          PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_mac_dev.provisionprofile
-          KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
-
-          # import certificate and provisioning profile from secrets
-          echo -n "$P12_BASE64_MAC" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$P12_DEV_BASE64_MAC" | base64 --decode --output $CERTIFICATE_DEV_PATH
-          echo -n "$PROVISION_PROFILE_BASE64_MAC" | base64 --decode --output $PP_PATH
-          echo -n "$PROVISION_PROFILE_DEV_BASE64_MAC" | base64 --decode --output $PP_DEV_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security import $CERTIFICATE_DEV_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          mv $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-          mv $PP_DEV_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
       - name: Build macOS
         run: |
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
           bash build-macos.sh && flutter build macos
+
+      - name: Install certificates
+        env:
+          P12_BASE64_MAC: ${{ secrets.P12_BASE64_MAC }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$P12_BASE64_MAC" | base64 --decode --output $CERTIFICATE_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # security default-keychain -s $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+      - name: Code Signing
+        run: /usr/bin/codesign --force -s "$SIGNING_IDENTITY" --options runtime PicGuard.app -v
+        working-directory: build/macos/Build/Products/Release
+        env:
+          SIGNING_IDENTITY: ${{ secrets.SIGNING_IDENTITY }}
+
+      - name: Notarize app
+        run: |
+          PROFILE_PATH=$RUNNER_TEMP/pg-profile
+          
+          # Store the notarization credentials so that we can prevent a UI password dialog
+          # from blocking the CI
+          echo "Create keychain profile"
+          xcrun notarytool store-credentials "$PROFILE_PATH" --apple-id "$APPLE_ID" --team-id "$APPLE_TEAM_ID" --password "$APPLE_PASSWORD"
+
+          # We can't notarize an app bundle directly, but we need to compress it as an archive.
+          # Therefore, we create a zip file containing our app bundle, so that we can send it to the
+          # notarization service
+          echo "Creating temp notarization archive"
+          ditto -c -k --keepParent "PicGuard.app" "PicGuard.zip"
+
+          # Here we send the notarization request to the Apple's Notarization service, waiting for the result.
+          # This typically takes a few seconds inside a CI environment, but it might take more depending on the App
+          # characteristics. Visit the Notarization docs for more information and strategies on how to optimize it if
+          # you're curious
+          echo "Notarize app"
+          xcrun notarytool submit "PicGuard.zip" --keychain-profile "$PROFILE_PATH" --wait
+
+          # Finally, we need to "attach the staple" to our executable, which will allow our app to be
+          # validated by macOS even when an internet connection is not available.
+          echo "Attach staple"
+          xcrun stapler staple "PicGuard.app"
+        working-directory: build/macos/Build/Products/Release
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
       - name: Build DMG
         run: |
@@ -299,4 +324,3 @@ jobs:
             echo "$RUNNER_TEMP/pg-signing.keychain-db"
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
-          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.provisionprofile
