--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for Android
-        run: cp *.apk $GITHUB_WORKSPACE/
+        run: cp *.apk $GITHUB_WORKSPACE/PicGuard.apk
         working-directory: build/app/outputs/flutter-apk
 
       - name: Clean up
@@ -114,7 +114,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for Android
-        run: cp *.aab $GITHUB_WORKSPACE/
+        run: cp *.aab $GITHUB_WORKSPACE/PicGuard.aab
         working-directory: build/app/outputs/bundle/stagingRelease
 
       - name: Clean up
