--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,8 +31,10 @@
 		<string>$(CURRENT_PROJECT_VERSION)</string>
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
+		<key>NSCameraUsageDescription</key>
+        <string>For you to take photos, PicGuard needs access to your Camera.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
-		<string>For you to upload and send local pictures to your clients, PicGuard needs access to your Photos.</string>
+		<string>For you to upload pictures, PicGuard needs access to your Photos.</string>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>UILaunchStoryboardName</key>
