refactor: update home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   fluttertoast: ^8.2.5
   form_builder_validators: ^9.1.0
+  gap: ^3.0.1
   image_picker: ^1.1.0
   keyboard_dismisser: ^3.0.0
   logger: ^2.2.0
