--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,17 +69,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.9
+  flutter_distributor: ^0.4.0
   flutter_gen_runner: ^5.4.0
   flutter_test:
     sdk: flutter
   slang_build_runner: ^3.30.0
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   very_good_analysis: ^5.1.0
+
+dependency_overrides:
+  uuid: ^4.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
