--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,7 +14,7 @@ slots:
   dbus-picguard: # adjust accordingly to your app name
     interface: dbus
     bus: session
-    name: com.kjxbyz.picguard # adjust accordingly to your app name and
+    name: com.kjxbyz.watermarkassistant # adjust accordingly to your app name and
 
 apps:
   picguard:
@@ -29,3 +29,7 @@ parts:
     source: .
     plugin: flutter
     flutter-target: lib/main.dart # The main entry-point file of the application
+#    override-build: | # https://forum.snapcraft.io/t/issue-while-packaging-snap/33693
+#      craftctl default
+#      # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
+#      sed -e '1c#!/usr/bin/env python3' -i "${CRAFT_PART_INSTALL}/usr/bin/picguard"
